--- a/NEWS
+++ b/NEWS
@@ -6,13 +6,13 @@ New in 0.9f:
   the Automake documentation for more information.
 * Added new `--disable-static' flag to disable building static
   libraries on platforms that have shared libs.
-* New `-allow-undefined' flag to build shared libs that contain
+* New `-allow-undefined' link flag to build shared libs that contain
   references to unresolved symbols.
 * Basic support for dynamically loaded modules: new `-export-dynamic'
   linking flag and corresponding `dlname' mode.
 * New `--features' flag to display configured libtool attributes.
 * Support *-*-linux-gnu* as an alias for *-*-linux*.
-* Support for *-*-openbsd*.
+* Support for *-*-openbsd* and *-*-freebsd3*.
 
 New in 0.9:
 * Bug fixes.
