--- a/README
+++ b/README
@@ -33,6 +33,6 @@ See the info node (libtool)Tested Platforms. (or the file doc/platforms.texi)
 for a list of platforms that libtool shared library support was tested on.
 
 If you have any suggestions or bug reports, or you wish to port libtool
-to a new platform, please send electronic mail to Gord Matzigkeit
-<gord@gnu.ai.mit.edu>.  Don't forget to mention the version of libtool
+to a new platform, please send electronic mail to the libtool mailing list
+<bug-libtool@gnu.ai.mit.edu>.  Don't forget to mention the version of libtool
 that you are currently using (by typing `ltconfig --version').
