--- a/demo/README
+++ b/demo/README
@@ -5,5 +5,5 @@ Admittedly, it would be better if this was a more realistic example,
 say, a program that actually did something useful, but we can't have
 everything.
 
-Send bug reports and comments about GNU hell to Gord Matzigkeit
-<gord@gnu.ai.mit.edu>.
+Send bug reports and comments about GNU hell to the libtool mailing
+list <bug-libtool@gnu.ai.mit.edu>.
